cluster/apps/ansible-semaphore/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ansible-semaphore
  labels:
    k10/injectKanisterSidecar: "true"
